--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ production:
     - docker:dind
   script:
     - install_helm
+    - helm version --client
     - helm dep build release
     - helm upgrade --install release --name crawler
 
