--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,17 +8,16 @@ production:
 
   script:
     - install_helm
-    - helm version --client
     - helm dep build release
     - helm upgrade --install release --name crawler
 
 .helper_functions: &helper_functions |
-  export CI_REGISTRY="index.docker.io"
-  export CI_APPLICATION_REPOSITORY=$CI_REGISTRY/$CI_PROJECT_PATH
+
   function install_helm() {
   apk add -U openssl curl tar gzip bash ca-certificates git
   curl https://kubernetes-helm.storage.googleapis.com/helm-v2.7.2-linux-amd64.tar.gz | tar zx
   mv linux-amd64/helm /usr/bin/
+  helm init --client-only
   }
 
 before_script:
