--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ staging:
     - install_helm
     - helm dep build release
     - helm upgrade --install --wait \
-      --namespace="$KUBE_NAMESPACE"
+      --namespace="$KUBE_NAMESPACE" \
       crawler release  
   variables:
     KUBE_NAMESPACE: staging
