--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,9 +10,7 @@ staging:
   script:
     - install_helm
     - helm dep build release
-    - helm upgrade --install --wait \
-      --namespace="$KUBE_NAMESPACE" \
-      crawler release  
+    - helm upgrade --install --wait --namespace="$KUBE_NAMESPACE" "crawler" release  
   variables:
     KUBE_NAMESPACE: staging
 
@@ -23,7 +21,7 @@ production:
     - install_helm
     - helm dep build release
     - helm upgrade --install --wait \
-      --namespace="$KUBE_NAMESPACE"
+      --namespace="$KUBE_NAMESPACE" \
       crawler release
   variables:
     KUBE_NAMESPACE: production
