--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -20,9 +20,9 @@ production:
   script:
     - install_helm
     - helm dep build release
-    - helm upgrade --install --wait \
-        --namespace="$KUBE_NAMESPACE" \
-        crawler release
+    - helm upgrade --install --wait
+      --namespace="$KUBE_NAMESPACE"
+      crawler release
   variables:
     KUBE_NAMESPACE: production
 
